--- a/Sanchez_notebook.ipynb
+++ b/Sanchez_notebook.ipynb
@@ -1898,6 +1898,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filled_nas.to_csv('data/final_columns.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EDA_Sanchez.ipynb             example.json\n",
+      "FraudCaseStudyOverview.ipynb  example_app.py\n",
+      "Pickle.ipynb                  \u001b[1m\u001b[36mfor_instructors\u001b[m\u001b[m/\n",
+      "Sams-notebook.ipynb           model_notes.md\n",
+      "Sanchez_notebook.ipynb        pair.md\n",
+      "Stephen_notebook.ipynb        readme.md\n",
+      "\u001b[1m\u001b[36m__pycache__\u001b[m\u001b[m/                  stephen_eda.py\n",
+      "assignment.md                 subset_json.py\n",
+      "\u001b[1m\u001b[36mdata\u001b[m\u001b[m/\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
