--- a/Sams-notebook.ipynb
+++ b/Sams-notebook.ipynb
@@ -2,70 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 67280\r\n",
-      "-rw-r--r--  1 sambuck92  staff    33M Dec 17 08:46 data.zip\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls -lh data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archive:  data/data.zip\n",
-      "  inflating: data/data.json          \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!unzip data/data.zip -d data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       0 8173151 250481668 data/data.json\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wc data/data.json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing subset_json.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile subset_json.py\n",
     "\"\"\"head_json.py - extract a couple records from a huge json file.\n",
@@ -94,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,18 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_json('data/subset.json')"
+    "df = pd.read_json('data/data.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,11 +202,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>event_published</th>\n",
-       "      <td>1263109838</td>\n",
-       "      <td>1293833295</td>\n",
-       "      <td>1291091908</td>\n",
-       "      <td>1360683446</td>\n",
-       "      <td>1291994966</td>\n",
+       "      <td>1.26311e+09</td>\n",
+       "      <td>1.29383e+09</td>\n",
+       "      <td>1.29109e+09</td>\n",
+       "      <td>1.36068e+09</td>\n",
+       "      <td>1.29199e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>event_start</th>\n",
@@ -515,7 +481,7 @@
        "email_domain                                                gmail.com   \n",
        "event_created                                              1262739706   \n",
        "event_end                                                  1265630400   \n",
-       "event_published                                            1263109838   \n",
+       "event_published                                           1.26311e+09   \n",
        "event_start                                                1265594400   \n",
        "fb_published                                                        0   \n",
        "gts                                                                 0   \n",
@@ -561,7 +527,7 @@
        "email_domain                                                  ruf.org   \n",
        "event_created                                              1293832670   \n",
        "event_end                                                  1296288000   \n",
-       "event_published                                            1293833295   \n",
+       "event_published                                           1.29383e+09   \n",
        "event_start                                                1296255600   \n",
        "fb_published                                                        0   \n",
        "gts                                                            868.02   \n",
@@ -607,7 +573,7 @@
        "email_domain                                           pvsd.k12.ca.us   \n",
        "event_created                                              1291090956   \n",
        "event_end                                                  1295740800   \n",
-       "event_published                                            1291091908   \n",
+       "event_published                                           1.29109e+09   \n",
        "event_start                                                1295713800   \n",
        "fb_published                                                        0   \n",
        "gts                                                              3500   \n",
@@ -653,7 +619,7 @@
        "email_domain                                     irishtabletennis.com   \n",
        "event_created                                              1360681570   \n",
        "event_end                                                  1388534400   \n",
-       "event_published                                            1360683446   \n",
+       "event_published                                           1.36068e+09   \n",
        "event_start                                                1360702800   \n",
        "fb_published                                                        0   \n",
        "gts                                                           1167.35   \n",
@@ -699,7 +665,7 @@
        "email_domain                               artsandbusinesscouncil.org  \n",
        "event_created                                              1291994666  \n",
        "event_end                                                  1297468800  \n",
-       "event_published                                            1291994966  \n",
+       "event_published                                           1.29199e+09  \n",
        "event_start                                                1297440000  \n",
        "fb_published                                                        1  \n",
        "gts                                                           2313.15  \n",
@@ -734,13 +700,98 @@
        "venue_state                                                        MA  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head().T\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_id = []\n",
+    "for idx, row in df.iterrows():\n",
+    "    if len(row['ticket_types']) == 0:\n",
+    "        event_id.append('x')\n",
+    "    else:\n",
+    "        eid = row['ticket_types'][0]['event_id']\n",
+    "        event_id.append(eid)\n",
+    "\n",
+    "df['event_id'] = event_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14337 entries, 0 to 14336\n",
+      "Data columns (total 45 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   acct_type           14337 non-null  object \n",
+      " 1   approx_payout_date  14337 non-null  int64  \n",
+      " 2   body_length         14337 non-null  int64  \n",
+      " 3   channels            14337 non-null  int64  \n",
+      " 4   country             14256 non-null  object \n",
+      " 5   currency            14337 non-null  object \n",
+      " 6   delivery_method     14321 non-null  float64\n",
+      " 7   description         14337 non-null  object \n",
+      " 8   email_domain        14337 non-null  object \n",
+      " 9   event_created       14337 non-null  int64  \n",
+      " 10  event_end           14337 non-null  int64  \n",
+      " 11  event_published     14238 non-null  float64\n",
+      " 12  event_start         14337 non-null  int64  \n",
+      " 13  fb_published        14337 non-null  int64  \n",
+      " 14  gts                 14337 non-null  float64\n",
+      " 15  has_analytics       14337 non-null  int64  \n",
+      " 16  has_header          8928 non-null   float64\n",
+      " 17  has_logo            14337 non-null  int64  \n",
+      " 18  listed              14337 non-null  object \n",
+      " 19  name                14337 non-null  object \n",
+      " 20  name_length         14337 non-null  int64  \n",
+      " 21  num_order           14337 non-null  int64  \n",
+      " 22  num_payouts         14337 non-null  int64  \n",
+      " 23  object_id           14337 non-null  int64  \n",
+      " 24  org_desc            14337 non-null  object \n",
+      " 25  org_facebook        14278 non-null  float64\n",
+      " 26  org_name            14337 non-null  object \n",
+      " 27  org_twitter         14278 non-null  float64\n",
+      " 28  payee_name          14337 non-null  object \n",
+      " 29  payout_type         14337 non-null  object \n",
+      " 30  previous_payouts    14337 non-null  object \n",
+      " 31  sale_duration       14182 non-null  float64\n",
+      " 32  sale_duration2      14337 non-null  int64  \n",
+      " 33  show_map            14337 non-null  int64  \n",
+      " 34  ticket_types        14337 non-null  object \n",
+      " 35  user_age            14337 non-null  int64  \n",
+      " 36  user_created        14337 non-null  int64  \n",
+      " 37  user_type           14337 non-null  int64  \n",
+      " 38  venue_address       14337 non-null  object \n",
+      " 39  venue_country       13261 non-null  object \n",
+      " 40  venue_latitude      13261 non-null  float64\n",
+      " 41  venue_longitude     13261 non-null  float64\n",
+      " 42  venue_name          13261 non-null  object \n",
+      " 43  venue_state         13261 non-null  object \n",
+      " 44  event_id            14337 non-null  object \n",
+      "dtypes: float64(9), int64(18), object(18)\n",
+      "memory usage: 4.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
