added my own stuff to work on chris

--- a/Stephen_notebook.ipynb
+++ b/Stephen_notebook.ipynb
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "\n",
-    "df = pd.read_json('data/data.json')"
+    "df = pd.read_csv('data/final_columns.csv')"
    ]
   },
   {
@@ -103,30 +103,57 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "premium             12373\n",
-       "fraudster_event       851\n",
-       "fraudster             437\n",
-       "spammer_limited       218\n",
-       "spammer_warn          144\n",
-       "tos_warn               91\n",
-       "spammer_noinvite       84\n",
-       "tos_lock               77\n",
-       "locked                 54\n",
-       "fraudster_att           5\n",
-       "spammer_web             2\n",
-       "spammer                 1\n",
-       "Name: acct_type, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14337 entries, 0 to 14336\n",
+      "Data columns (total 36 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   body_length          14337 non-null  int64  \n",
+      " 1   channels             14337 non-null  int64  \n",
+      " 2   fb_published         14337 non-null  int64  \n",
+      " 3   has_logo             14337 non-null  int64  \n",
+      " 4   name_length          14337 non-null  int64  \n",
+      " 5   org_facebook         14337 non-null  float64\n",
+      " 6   org_twitter          14337 non-null  float64\n",
+      " 7   show_map             14337 non-null  int64  \n",
+      " 8   user_age             14337 non-null  int64  \n",
+      " 9   user_type            14337 non-null  int64  \n",
+      " 10  Label                14337 non-null  int64  \n",
+      " 11  month                14337 non-null  int64  \n",
+      " 12  day                  14337 non-null  int64  \n",
+      " 13  hour                 14337 non-null  int64  \n",
+      " 14  minute               14337 non-null  int64  \n",
+      " 15  dayofyear            14337 non-null  int64  \n",
+      " 16  weekofyear           14337 non-null  int64  \n",
+      " 17  week                 14337 non-null  int64  \n",
+      " 18  dayofweek            14337 non-null  int64  \n",
+      " 19  quarter              14337 non-null  int64  \n",
+      " 20  is_month_start       14337 non-null  bool   \n",
+      " 21  is_month_end         14337 non-null  bool   \n",
+      " 22  is_quarter_start     14337 non-null  bool   \n",
+      " 23  is_quarter_end       14337 non-null  bool   \n",
+      " 24  time_diff_seconds    14337 non-null  float64\n",
+      " 25  previous_payout0     14337 non-null  int64  \n",
+      " 26  has_header_0.0       14337 non-null  int64  \n",
+      " 27  has_header_1.0       14337 non-null  int64  \n",
+      " 28  has_header_nan       14337 non-null  int64  \n",
+      " 29  yahoo                14337 non-null  int64  \n",
+      " 30  is_fr                14337 non-null  int64  \n",
+      " 31  is_org               14337 non-null  int64  \n",
+      " 32  delivery_method_0.0  14337 non-null  int64  \n",
+      " 33  delivery_method_1.0  14337 non-null  int64  \n",
+      " 34  delivery_method_3.0  14337 non-null  int64  \n",
+      " 35  delivery_method_nan  14337 non-null  int64  \n",
+      "dtypes: bool(4), float64(3), int64(29)\n",
+      "memory usage: 3.6 MB\n"
+     ]
     }
    ],
    "source": [
-    "df.acct_type.value_counts(dropna=False)"
+    "df.info()"
    ]
   },
   {
