working update db

--- a/Sanchez_notebook.ipynb
+++ b/Sanchez_notebook.ipynb
@@ -1328,15 +1328,8 @@
    "outputs": [],
    "source": [
     "X = filled_nas.drop('Label', axis=1).values\n",
-    "y = filled_nas['Label'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 403,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y = filled_nas['Label'].values\n",
+    "\n",
     "xtrain, xtest, ytrain, ytest = train_test_split(X, y, stratify=y)"
    ]
   },
@@ -1532,16 +1525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 734,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_neg = RandomForestClassifier(n_estimators=500, verbose=1, bootstrap=True, max_depth=100, max_features='sqrt', oob_score=True)"
+    "rf_neg = RandomForestClassifier(n_estimators=500, verbose=1, bootstrap=False, max_depth=100, max_features='sqrt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 735,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 736,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 737,
    "metadata": {},
    "outputs": [
     {
@@ -1568,17 +1561,17 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    2.7s finished\n"
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    4.5s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(max_depth=100, max_features='sqrt', n_estimators=500,\n",
-       "                       oob_score=True, verbose=1)"
+       "RandomForestClassifier(bootstrap=False, max_depth=100, max_features='sqrt',\n",
+       "                       n_estimators=500, verbose=1)"
       ]
      },
-     "execution_count": 616,
+     "execution_count": 737,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,50 +1582,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 738,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#np.mean(cross_val_score(rf_neg, negxtrain, negytrain, scoring=auc_prc, cv=5, verbose=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 739,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   Non-Fraud       0.99      1.00      0.99      1957\n",
+      "       Fraud       0.96      0.88      0.91       194\n",
+      "\n",
+      "    accuracy                           0.99      2151\n",
+      "   macro avg       0.97      0.94      0.95      2151\n",
+      "weighted avg       0.98      0.99      0.98      2151\n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    2.3s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.6s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    2.5s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.7s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    2.4s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.7s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    2.3s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.7s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    2.3s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.7s finished\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:   19.1s finished\n"
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.1s finished\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.9174218545698641"
-      ]
-     },
-     "execution_count": 617,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(cross_val_score(rf_neg, negxtrain, negytrain, scoring=auc_prc, cv=5, verbose=1))"
+    "neg_preds = rf_neg.predict(negxtest)\n",
+    "print(classification_report(negytest, neg_preds, target_names=['Non-Fraud', 'Fraud']))"
    ]
   },
   {
@@ -3127,6 +3115,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Reduced Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 711,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_features = ['body_length', 'channels', 'fb_published', 'name_length','org_facebook', 'user_age', 'user_type',\n",
+    "                    'previous_payout0', 'has_header_1.0','yahoo', 'is_org','delivery_method_3.0','ticket_cost', 'ticket_quant_total', 'Label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 712,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced = neg_value_cols.loc[:, reduced_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 713,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xreduced = reduced.drop('Label', axis=1).values\n",
+    "yreduced = reduced['Label'].values\n",
+    "xredtrain, xredtest, yredtrain, yredtest = train_test_split(Xreduced, yreduced, stratify=yreduced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 731,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_reduced = RandomForestClassifier(bootstrap=False, max_depth=100, max_features='sqrt', n_estimators=600, verbose=1, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 728,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    2.6s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    0.8s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    2.6s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    0.8s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    2.6s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    0.8s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    2.6s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    0.8s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    2.6s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    0.8s finished\n",
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:   21.3s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8990869522404322"
+      ]
+     },
+     "execution_count": 728,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(cross_val_score(rf_reduced, xredtrain, yredtrain, scoring=auc_prc, cv=5, verbose=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 732,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    4.7s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=False, max_depth=100, max_features='sqrt',\n",
+       "                       n_estimators=600, random_state=42, verbose=1)"
+      ]
+     },
+     "execution_count": 732,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_reduced.fit(xredtrain, yredtrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 733,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   Non-Fraud       0.99      0.99      0.99      3262\n",
+      "       Fraud       0.94      0.85      0.89       323\n",
+      "\n",
+      "    accuracy                           0.98      3585\n",
+      "   macro avg       0.96      0.92      0.94      3585\n",
+      "weighted avg       0.98      0.98      0.98      3585\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:    0.2s finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "reduced_preds = rf_reduced.predict(xredtest)\n",
+    "print(classification_report(yredtest, reduced_preds, target_names=['Non-Fraud', 'Fraud']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Save final feature columns to csv"
    ]
   },
@@ -3484,6 +3629,61 @@
    "source": [
     "pd.DataFrame.from_dict()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 753,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "stamp = datetime.now().timestamp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 754,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = [0, 8790, 'test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 755,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.insert(0, stamp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 756,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1608323014.884992, 0, 8790, 'test']"
+      ]
+     },
+     "execution_count": 756,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
