working prediction in db

--- a/Sanchez_notebook.ipynb
+++ b/Sanchez_notebook.ipynb
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 757,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 758,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 759,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 760,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    4.5s finished\n"
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    4.4s finished\n"
      ]
     },
     {
@@ -1571,13 +1571,61 @@
        "                       n_estimators=500, verbose=1)"
       ]
      },
-     "execution_count": 737,
+     "execution_count": 760,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rf_neg.fit(negxtrain, negytrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 766,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.0s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.002"
+      ]
+     },
+     "execution_count": 766,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_neg.predict_proba(negxtest[100].reshape(1, -1))[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 764,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 764,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_neg.classes_"
    ]
   },
   {
@@ -3660,16 +3708,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 767,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.insert(-1, 0.288)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 769,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.insert(len(test), 0.59)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 770,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1608323014.884992, 0, 8790, 'test']"
+       "[1608323014.884992, 0, 8790, 0.288, 'test', 0.59]"
       ]
      },
-     "execution_count": 756,
+     "execution_count": 770,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3702,7 +3768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
