last commit after presentation

--- a/Grant_fraud_notebook_2.ipynb
+++ b/Grant_fraud_notebook_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 571904\r\n",
-      "-rw-r--r--  1 gverploeg  staff   239M Aug  2  2016 data.json\r\n",
-      "-rw-r--r--  1 gverploeg  staff    33M Dec 17 17:44 data.zip\r\n",
-      "-rw-r--r--  1 gverploeg  staff   1.5M Dec 17 17:44 final_columns.csv\r\n",
-      "-rw-r--r--@ 1 gverploeg  staff   533K Dec 17 18:03 fraud_data.csv\r\n"
+      "total 571904\n",
+      "-rw-r--r--  1 gverploeg  staff   239M Aug  2  2016 data.json\n",
+      "-rw-r--r--  1 gverploeg  staff    33M Dec 17 17:44 data.zip\n",
+      "-rw-r--r--  1 gverploeg  staff   1.5M Dec 17 17:44 final_columns.csv\n",
+      "-rw-r--r--@ 1 gverploeg  staff   533K Dec 17 18:03 fraud_data.csv\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       0 8173151 250481668 data/data.json\r\n"
+      "       0 8173151 250481668 data/data.json\n"
      ]
     }
    ],
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_json('data/subset.json')"
+    "df = pd.read_json('data/data.json')"
    ]
   },
   {
@@ -2716,112 +2716,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cost</th>\n",
-       "      <th>availability</th>\n",
-       "      <th>quantity_total</th>\n",
-       "      <th>quantity_sold</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>2237.000000</td>\n",
-       "      <td>2237.000000</td>\n",
-       "      <td>2237.000000</td>\n",
-       "      <td>2237.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>303.790009</td>\n",
-       "      <td>1.005364</td>\n",
-       "      <td>32020.675458</td>\n",
-       "      <td>2.358963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1217.938370</td>\n",
-       "      <td>0.073061</td>\n",
-       "      <td>121539.335407</td>\n",
-       "      <td>13.468886</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>84.990000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>249.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>200.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>25000.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>500000.000000</td>\n",
-       "      <td>296.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               cost  availability  quantity_total  quantity_sold\n",
-       "count   2237.000000   2237.000000     2237.000000    2237.000000\n",
-       "mean     303.790009      1.005364    32020.675458       2.358963\n",
-       "std     1217.938370      0.073061   121539.335407      13.468886\n",
-       "min        0.000000      1.000000        0.000000       0.000000\n",
-       "25%       20.000000      1.000000       16.000000       0.000000\n",
-       "50%       84.990000      1.000000       50.000000       0.000000\n",
-       "75%      249.000000      1.000000      200.000000       0.000000\n",
-       "max    25000.000000      2.000000   500000.000000     296.000000"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'fraud' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-7b5bb91cbf45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mframe_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfraud\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mticket_types\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mframe_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfraud_ticket_types\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fraud' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2959,9 +2866,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fraud_ticket_types' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-251da26990a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfraud_ticket_types\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Label'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnonfraud_ticket_types\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Label'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fraud_ticket_types' is not defined"
+     ]
+    }
+   ],
    "source": [
     "fraud_ticket_types['Label'] = 1\n",
     "nonfraud_ticket_types['Label'] = 0"
@@ -2969,163 +2888,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>event_id</th>\n",
-       "      <th>cost</th>\n",
-       "      <th>availability</th>\n",
-       "      <th>quantity_total</th>\n",
-       "      <th>quantity_sold</th>\n",
-       "      <th>Label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>527017</td>\n",
-       "      <td>25.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>800</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>527017</td>\n",
-       "      <td>50.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>527017</td>\n",
-       "      <td>550.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1386643</td>\n",
-       "      <td>300.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1386643</td>\n",
-       "      <td>200.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2232</th>\n",
-       "      <td>5301408</td>\n",
-       "      <td>120.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>200</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2233</th>\n",
-       "      <td>5307036</td>\n",
-       "      <td>55.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>200</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2234</th>\n",
-       "      <td>5350990</td>\n",
-       "      <td>649.65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>125</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2235</th>\n",
-       "      <td>5456442</td>\n",
-       "      <td>45.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>400</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2236</th>\n",
-       "      <td>5492990</td>\n",
-       "      <td>283.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2237 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      event_id    cost  availability  quantity_total  quantity_sold  Label\n",
-       "0       527017   25.00             1             800              0      1\n",
-       "1       527017   50.00             1             100              0      1\n",
-       "2       527017  550.00             1              20              0      1\n",
-       "3      1386643  300.00             1              25              2      1\n",
-       "4      1386643  200.00             1              10              0      1\n",
-       "...        ...     ...           ...             ...            ...    ...\n",
-       "2232   5301408  120.00             1             200              0      1\n",
-       "2233   5307036   55.00             1             200              0      1\n",
-       "2234   5350990  649.65             1             125              0      1\n",
-       "2235   5456442   45.00             1             400              0      1\n",
-       "2236   5492990  283.00             1              20              0      1\n",
-       "\n",
-       "[2237 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'fraud_ticket_types' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-75e70d66ef24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfraud_ticket_types\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'fraud_ticket_types' is not defined"
+     ]
     }
    ],
    "source": [
@@ -11979,7 +11754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
